v9.1.0 - Add an operation to list existing users
