# src/controllers/user-controller.js
@@ -13,6 +13,14 @@ function userController(userService) {
 
   var router = express.Router()
 
+  router.get(`${USERS_URL}`, AuthService.withAuth((req, res, user) => {
+    Errors.handleErrorsGlobally(() => {
+      const allUsers = userService.all()
+      const representation = allUsers.map(userWithHypermediaControls);
+      res.status(200).json(representation);
+    }, res);
+  }));
+
   router.post(`${USERS_URL}`, AuthService.withAuth((req, res, user) => {
     if(utils.isAnyEmpty([req.body.username, req.body.password, req.body.email])) {
       res.status(400).send(new Errors.HttpError(400));
@@ -20,11 +28,7 @@ function userController(userService) {
       Errors.handleErrorsGlobally(() => {
         const createdUser = userService.create(req.body, user);
         
-        const representation = HypermediaRepresentationBuilder
-          .of(createdUser)
-          .representation(u => u.withoutPasswordRepresentation(ReverseRouter))
-          .link(HypermediaControls.confirmEmail)
-          .build();
+        const representation = userWithHypermediaControls(createdUser)
 
         res.status(201).location(ReverseRouter.forUser(createdUser.id)).json(representation);
       }, res);
@@ -107,6 +111,14 @@ function userController(userService) {
   }));
 
   return router;
+}
+
+function userWithHypermediaControls (user) {
+  return HypermediaRepresentationBuilder
+    .of(user)
+    .representation(u => u.withoutPasswordRepresentation(ReverseRouter))
+    .link(HypermediaControls.confirmEmail)
+    .build();
 }
 
 module.exports = userController;
